--- a/DOWTank/Views/TankSearch/Index.cshtml
+++ b/DOWTank/Views/TankSearch/Index.cshtml
@@ -50,22 +50,22 @@
                             <label class="control-label">Tank Status:</label>
                             @Html.DropDownList("LoadStatusTypeCD", null, new { @class = "form-control" })
                         </div>
-                    </div>
+                    </div><div class="row">
+    <div class="col-md-12">
+        <label>From:</label>
+    </div>
+    <div class="col-md-12">
+        <div class="col-md-4 nopadding">
+            @Html.DropDownList("LoadPoint", null, new { @class = "form-control" })
+        </div>
+        <div class="col-md-4 col-md-offset-1 mt5">
+            <input id="ddlLoadPoint" name="LocationFromCode" type="hidden" style="width: 100%; box-sizing: border-box;">
+        </div>
+    </div>
+</div>
                 </div>
              
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>From:</label>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="col-md-4 nopadding">
-                            @Html.DropDownList("LoadPoint", null, new { @class = "form-control" })
-                        </div>
-                        <div class="col-md-4 col-md-offset-1 mt5">
-                            <input id="ddlLoadPoint" name="LocationFromCode" type="hidden" style="width: 100%; box-sizing: border-box;">
-                        </div>
-                    </div>
-                </div>
+                
              
                 <div class="row mt10">
                     <div class="col-md-12">
