--- a/DOWTank/Views/InvoiceList/Index.cshtml
+++ b/DOWTank/Views/InvoiceList/Index.cshtml
@@ -8,23 +8,23 @@
     <div class="row mt10 mb20">
         <div class="col-md-12">
             <h4 class="dow-color">Invoice Console</h4>
-            @Html.HiddenFor(model => model.HfShowResult, new { id = "hfShowResult" })            
+            @Html.HiddenFor(model => model.HfShowResult, new { id = "hfShowResult" })
         </div>
     </div>
     <!--/title-->
     @using (Html.BeginForm("Search", "InvoiceList", FormMethod.Post))
     {
-    <div class="row mt10 mb10">
-        <div class="col-md-1">
-            <label class="control-label">Tank #:*</label>
+        <div class="row mt10 mb10">
+            <div class="col-md-1">
+                <label class="control-label">Tank #:*</label>
+            </div>
+            <div class="col-md-3">
+                @Html.TextBoxFor(model => model.TextSearch, new { @maxlength = "100", id = "txtSearch", @value = "", @class = "form-control" })
+            </div>
+            <div class="col-md-2">
+                <input id="btnSearch" type="submit" class="btn btn-default btn-primary" value="Search" />
+            </div>
         </div>
-        <div class="col-md-3">
-            @Html.TextBoxFor(model => model.TextSearch, new { @maxlength = "100", id = "txtSearch", @value="",@class = "form-control" })            
-        </div>
-        <div class="col-md-2">
-            <input id="btnSearch" type="submit" class="btn btn-default btn-primary" value="Search" />
-        </div>
-    </div>
     }
 
     <div id="divShowResults" style="display: none;">
@@ -40,130 +40,132 @@
                     <table class="table table-condensed table-striped table-bordered table-responsive table-hover dataTable no-footer dtr-inline" id="tblEquipmentInfo">
                         <thead>
                             <tr>
-                            @foreach (DataColumn col in Model.DataTableEquipmentInfo.Columns)                           
-                            {
-                                if (@col.ColumnName == "MajorLocationDS" || @col.ColumnName == "LocationDS" || @col.ColumnName == "LoadStatusTypeDS" || @col.ColumnName == "OwnerNM" || @col.ColumnName == "OperatorNM" || @col.ColumnName == "EquipmentTypeDS" || @col.ColumnName == "DedicatedLocationDS" || @col.ColumnName == "TankCapacity" || @col.ColumnName == "TankLastTestDT" || @col.ColumnName == "TankNextTestDT" )
+                                @foreach (DataColumn col in Model.DataTableEquipmentInfo.Columns)
                                 {
-                                    switch(@col.ColumnName)
+                                    if (@col.ColumnName == "MajorLocationDS" || @col.ColumnName == "LocationDS" || @col.ColumnName == "LoadStatusTypeDS" || @col.ColumnName == "OwnerNM" || @col.ColumnName == "OperatorNM" || @col.ColumnName == "EquipmentTypeDS" || @col.ColumnName == "DedicatedLocationDS" || @col.ColumnName == "TankCapacity" || @col.ColumnName == "TankLastTestDT" || @col.ColumnName == "TankNextTestDT")
                                     {
+                                        switch (@col.ColumnName)
+                                        {
                                             case "MajorLocationDS":
-                                                <th>Facility</th>
+                                    <th>Facility</th>
                                                 break;
                                             case "LocationDS":
-                                                <th>Location</th>
+                                    <th>Location</th>
                                                 break;
                                             case "LoadStatusTypeDS":
-                                                <th>Status</th>
+                                    <th>Status</th>
                                                 break;
                                             case "OwnerNM":
-                                                <th>Owner</th>
-                                                break; 
+                                    <th>Owner</th>
+                                                break;
                                             case "OperatorNM":
-                                                <th>Operator</th>
+                                    <th>Operator</th>
                                                 break;
                                             case "EquipmentTypeDS":
-                                                <th>Type</th>
+                                    <th>Type</th>
                                                 break;
                                             case "DedicatedLocationDS":
-                                                <th>Dedicated Location</th>
+                                    <th>Dedicated Location</th>
                                                 break;
                                             case "TankCapacity":
-                                                <th>Capacity</th>
+                                    <th>Capacity</th>
                                                 break;
                                             case "TankLastTestDT":
-                                                <th>Last Test</th>
+                                    <th>Last Test</th>
                                                 break;
                                             case "TankNextTestDT":
-                                                <th>Test Due</th>
+                                    <th>Test Due</th>
                                                 break;
+                                        }
                                     }
                                 }
-                            }                           
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (DataRow row in Model.DataTableEquipmentInfo.Rows)
-                        {         
-                        <tr>
-                            @foreach (DataColumn col in Model.DataTableEquipmentInfo.Columns)
-                            {   
-                                if (@col.ColumnName == "MajorLocationDS" || @col.ColumnName == "LocationDS" || @col.ColumnName == "LoadStatusTypeDS" || @col.ColumnName == "OwnerNM" || @col.ColumnName == "OperatorNM" || @col.ColumnName == "EquipmentTypeDS" || @col.ColumnName == "DedicatedLocationDS" || @col.ColumnName == "TankCapacity" || @col.ColumnName == "TankLastTestDT" || @col.ColumnName == "TankNextTestDT" )
-                                {<td>@row[col.ColumnName]</td>}
-                            }
-                        </tr>
+                            {         
+                                <tr>
+                                    @foreach (DataColumn col in Model.DataTableEquipmentInfo.Columns)
+                                    {
+                                        if (@col.ColumnName == "MajorLocationDS" || @col.ColumnName == "LocationDS" || @col.ColumnName == "LoadStatusTypeDS" || @col.ColumnName == "OwnerNM" || @col.ColumnName == "OperatorNM" || @col.ColumnName == "EquipmentTypeDS" || @col.ColumnName == "DedicatedLocationDS" || @col.ColumnName == "TankCapacity" || @col.ColumnName == "TankLastTestDT" || @col.ColumnName == "TankNextTestDT")
+                                        {<td>@row[col.ColumnName]</td>}
+                                    }
+                                </tr>
                             }
                         </tbody>
                     </table>
                 </div>
             </div>
 
-            <div class="row mt10">
-                <div class="row no-margin">
-                    <div class="col-md-12">
-                        <h4>Cleaning & Maint Moves  <span class="ml3">(@ViewBag.TotalRecordsMoveHistory)</span></h4>
-                    </div>
+
+            <div class="row no-margin">
+                <div class="col-md-12 mt10">
+                    <h4>Cleaning & Maint Moves  <span class="ml3">(@ViewBag.TotalRecordsMoveHistory)</span></h4>
                 </div>
             </div>
-
-            @using (Html.BeginForm("Filter", "InvoiceList", FormMethod.Post))
-    {
-    <div class="row">
-        <div class="col-md-2">
-            <label class="control-label">Search Column:</label>
-            @Html.HiddenFor(model => model.SelectedColumn, new { id = "hfSelectedColumn" ,@Value = ""})            
-        </div>
-        <div class="col-md-3">
-            <select id="ddlFilter" class="form-control">
-                <option value="">---Select---</option>
-                <option value="Chassis">Chassis</option>
-                <option value="From">From</option>
-                <option value="To">To</option>
-                <option value="Product">Product</option>
-                <option value="Charge #">Charge #</option>
-                <option value="Shipment">Shipment</option>
-                <option value="Status">Status</option>                
-                <option value="Driver">Driver</option>
-            </select>
-        </div>
-        <div class="col-md-1">
-            <label class="control-label">Text:</label>
-        </div>
-        <div class="col-md-3">
-            @Html.TextBoxFor(model => model.TextFilter, new { @maxlength = "100", id = "txtFilter", @value="", @class = "form-control" })
-        </div>
-        <div class="col-md-1">
-            <input id="btnFilter" type="submit" class="btn btn-default btn-primary" value="Filter" />
-        </div>
-    </div>
-            <br />
-            }
             <div class="row no-margin">
                 <div class="col-md-12">
-                    <table class="table table-condensed table-striped table-bordered table-responsive table-hover dataTable no-footer dtr-inline id="tblMoveHistory">
+                    @using (Html.BeginForm("Filter", "InvoiceList", FormMethod.Post))
+                    {
+                        <div class="row">
+                            <div class="col-md-2">
+                                <label class="control-label">Search Column:</label>
+                                @Html.HiddenFor(model => model.SelectedColumn, new { id = "hfSelectedColumn", @Value = "" })
+                            </div>
+                            <div class="col-md-3">
+                                <select id="ddlFilter" class="form-control">
+                                    <option value="">---Select---</option>
+                                    <option value="Chassis">Chassis</option>
+                                    <option value="From">From</option>
+                                    <option value="To">To</option>
+                                    <option value="Product">Product</option>
+                                    <option value="Charge #">Charge #</option>
+                                    <option value="Shipment">Shipment</option>
+                                    <option value="Status">Status</option>
+                                    <option value="Driver">Driver</option>
+                                </select>
+                            </div>
+                            <div class="col-md-1">
+                                <label class="control-label">Text:</label>
+                            </div>
+                            <div class="col-md-3">
+                                @Html.TextBoxFor(model => model.TextFilter, new { @maxlength = "100", id = "txtFilter", @value = "", @class = "form-control" })
+                            </div>
+                            <div class="col-md-1">
+                                <input id="btnFilter" type="submit" class="btn btn-default btn-primary" value="Filter" />
+                            </div>
+                        </div>
+                        <br />
+                    }
+                </div>
+            </div>
+            <div class="row no-margin">
+                <div class="col-md-12">
+                    <table class="table table-condensed table-striped table-bordered table-responsive table-hover dataTable no-footer dtr-inline" id="tblMoveHistory">
                         <thead>
                             <tr>
-                                @foreach (DataColumn col in Model.DataTableMoveHistory.Columns)                           
-                            {
-                            if (@col.ColumnName != "DispatchID" && @col.ColumnName != "Equipment #" && @col.ColumnName != "ChargeBlock" && @col.ColumnName != "Date"&& @col.ColumnName != "Contact" && @col.ColumnName != "Comments")
-                           {
-                            <th>@col.ColumnName</th>
-                                }
+                                @foreach (DataColumn col in Model.DataTableMoveHistory.Columns)
+                                {
+                                    if (@col.ColumnName != "DispatchID" && @col.ColumnName != "Equipment #" && @col.ColumnName != "ChargeBlock" && @col.ColumnName != "Date" && @col.ColumnName != "Contact" && @col.ColumnName != "Comments")
+                                    {
+                                    <th>@col.ColumnName</th>
+                                    }
 
                                 }
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (DataRow row in Model.DataTableMoveHistory.Rows)
-                        {         
-                        <tr>
-                            @foreach (DataColumn col in Model.DataTableMoveHistory.Columns)
-                            {   
-                            if (@col.ColumnName != "DispatchID" && @col.ColumnName != "Equipment #" && @col.ColumnName != "ChargeBlock" && @col.ColumnName != "Date"&& @col.ColumnName != "Contact" && @col.ColumnName != "Comments")
-                            {                         
-                                <td>@row[col.ColumnName]</td>
-                            }
-                            }
-                        </tr>
+                            {         
+                                <tr>
+                                    @foreach (DataColumn col in Model.DataTableMoveHistory.Columns)
+                                    {
+                                        if (@col.ColumnName != "DispatchID" && @col.ColumnName != "Equipment #" && @col.ColumnName != "ChargeBlock" && @col.ColumnName != "Date" && @col.ColumnName != "Contact" && @col.ColumnName != "Comments")
+                                        {                         
+                                        <td>@row[col.ColumnName]</td>
+                                        }
+                                    }
+                                </tr>
                             }
                         </tbody>
                     </table>
@@ -178,21 +180,21 @@
                 <table class="table table-condensed table-striped table-bordered table-responsive table-hover dataTable no-footer dtr-inline" id="tblTankInformation">
                     <thead>
                         <tr>
-                            @foreach (DataColumn col in Model.DataTableEquipmentProduct.Columns)                           
+                            @foreach (DataColumn col in Model.DataTableEquipmentProduct.Columns)
                             {
-                           <th>@col.ColumnName</th>
+                                <th>@col.ColumnName</th>
                             }
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (DataRow row in Model.DataTableEquipmentProduct.Rows)
                         {         
-                        <tr>
-                            @foreach (DataColumn col in Model.DataTableEquipmentProduct.Columns)
-                            {                            
-                                <td>@row[col.ColumnName]</td>
-                            }
-                        </tr>
+                            <tr>
+                                @foreach (DataColumn col in Model.DataTableEquipmentProduct.Columns)
+                                {                            
+                                    <td>@row[col.ColumnName]</td>
+                                }
+                            </tr>
                         }
                     </tbody>
                 </table>
@@ -212,24 +214,24 @@
                 <table class="table table-condensed table-striped table-bordered table-responsive table-hover dataTable no-footer dtr-inline" id="tblInvoiceHistory">
                     <thead>
                         <tr>
-                            @foreach (DataColumn col in Model.DataTableInvoiceHistory.Columns)                           
+                            @foreach (DataColumn col in Model.DataTableInvoiceHistory.Columns)
                             {
-                                if (@col.ColumnName == "InvoiceDT" || @col.ColumnName == "InvoiceAn" || @col.ColumnName == "InvoiceTotalAmt" ||@col.ColumnName == "ChargeCodeAN")
+                                if (@col.ColumnName == "InvoiceDT" || @col.ColumnName == "InvoiceAn" || @col.ColumnName == "InvoiceTotalAmt" || @col.ColumnName == "ChargeCodeAN")
                                 {
-                                    switch(@col.ColumnName)
+                                    switch (@col.ColumnName)
                                     {
                                         case "InvoiceDT":
-                                            <th>Invoice Date</th>
+                                <th>Invoice Date</th>
                                             break;
                                         case "InvoiceAn":
-                                            <th>Invoice No</th>
+                                <th>Invoice No</th>
                                             break;
                                         case "InvoiceTotalAmt":
-                                            <th>Total</th>
+                                <th>Total</th>
                                             break;
                                         case "ChargeCodeAN":
-                                            <th>Charge Code</th>
-                                            break; 
+                                <th>Charge Code</th>
+                                            break;
                                     }
                                 }
                             }
@@ -238,15 +240,15 @@
                     <tbody>
                         @foreach (DataRow row in Model.DataTableInvoiceHistory.Rows)
                         {         
-                        <tr>
-                            @foreach (DataColumn col in Model.DataTableInvoiceHistory.Columns)
-                            {  
-                                if (@col.ColumnName == "InvoiceDT" || @col.ColumnName == "InvoiceAn" || @col.ColumnName == "InvoiceTotalAmt" ||@col.ColumnName == "ChargeCodeAN")
+                            <tr>
+                                @foreach (DataColumn col in Model.DataTableInvoiceHistory.Columns)
                                 {
+                                    if (@col.ColumnName == "InvoiceDT" || @col.ColumnName == "InvoiceAn" || @col.ColumnName == "InvoiceTotalAmt" || @col.ColumnName == "ChargeCodeAN")
+                                    {
                                     <td>@row[col.ColumnName]</td>
+                                    }
                                 }
-                            }
-                        </tr>
+                            </tr>
                         }
                     </tbody>
                 </table>
