--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                     <li>@Html.ActionLink("Audit Driver List", "AuditDriverList", "Report")</li>
                     <li>@Html.ActionLink("Tank History", "Index", "TankHistory")</li>
                     <li>@Html.ActionLink("Dispatch", "Index", "Dispatch")</li>
+                    <li>@Html.ActionLink("Invoice", "Index", "InvoiceList")</li>
                 </ul>
             </div>
         </div>
